# Web-Scraping

./: iim_jobs_for_hr.csv  iims_scraper.py  indeed_jobs.csv  indeed_jobs_extended.csv  main.py  monster_jobs_all.csv  more_attr.py  mosnter_scrape.py  pandu.py  play.py  pyproject.toml
