[project]
name = "webscrape-class-proj"
version = "0.1.0"
description = "Add your description here"
readme = "README.md"
requires-python = ">=3.12"
dependencies = [
    "bs4>=0.0.2",
    "numpy>=2.4.1",
    "pandas>=3.0.0",
    "playwright>=1.57.0",
    "requests>=2.32.5",
    "scrapling>=0.3.14",
    "scrapy>=2.14.1",
    "selenium>=4.40.0",
    "zenrows>=1.4.0",
]
